#5 add flutter app
